docs/src/assets/styles/common.css
/* 图标库引用（如果需要） */
@import url('https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css');

.site-button-ghost-wrapper {
  padding: 16px;
  background: rgb(190, 200, 200);
}

html,
body {
  scrollbar-width: thin;
  scrollbar-color: #eaeaea transparent;
}

.custom-carousel-item {
  margin: 0;
  height: 160px;
  color: #fff;
  line-height: 160px;
  text-align: center;
  background: #364d79;
}

.grid-demo-box .ant-doc-demo-box-demo .ant-row > div:not(.gutter-row):nth-child(2n + 1) {
  background: #1677ffbf;
}

.grid-demo-box .ant-doc-demo-box-demo .ant-row > div:not(.gutter-row) {
  padding: 16px 0;
  background: #1677ff;
}

.grid-demo-box .ant-doc-demo-box-demo .ant-row > div {
  min-height: 30px;
  margin-top: 8px;
  margin-bottom: 8px;
  color: #fff;
  text-align: center;
  border-radius: 0;
}

.pic-plus {
  & > * {
    display: inline-block !important;
    vertical-align: middle;
  }
  span {
    margin: 0 var(--ant-margin-md);
    color: #aaa;
    font-size: 30px;
    user-select: none;
  }
}

.ant-doc-main-sider-menu.ant-menu-inline > .ant-menu-item-group > .ant-menu-item-group-title::after {
  position: relative;
  top: 12px;
  display: block;
  width: calc(100% - 20px);
  height: 1px;
  background: var(--ant-color-split);
  content: '';
}

.ant-doc-main-sider-menu.ant-menu-inline > .ant-menu-item-group > .ant-menu-item-group-title {
  margin-top: var(--ant-margin);
  margin-bottom: var(--ant-margin);
  font-size: var(--ant-font-size);
}

.ant-doc-main-sider-menu.ant-menu-inline.ant-menu-inline .ant-menu-item-group-title {
  margin-left: var(--ant-margin-xxs);
  padding-inline: 28px 12px !important;
}

.ant-doc-main-sider-menu.ant-menu-inline > .ant-menu-item {
  padding-inline: 36px 12px !important;
}

::view-transition-old(root),
::view-transition-new(root) {
  animation: none;
  mix-blend-mode: normal;
}

::view-transition-old(root) {
  z-index: 1;
}

::view-transition-new(root) {
  z-index: 9999;
}

